@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!-- NAS4Free default system configuration -->
 <nas4free>
-	<version>1.2</version>
+	<version>1.3</version>
 	<lastchange></lastchange>
 	<system>
 		<hostname>nas4free</hostname>
@@ -31,7 +31,7 @@
 		<zeroconf/>
 		<!-- The message of the day has to be encoded otherwise line breaks
 		will get lost because of the PHP XML parser. -->
-		<motd>V2VsY29tZSB0byBOQVM0RnJlZSE=</motd>
+		<motd>V2VsY29tZSB0byBOQVM0RnJlZSENCg==</motd>
 		<!--
 		<disableconsolemenu/>
 		<enableserialconsole/>
@@ -136,6 +136,7 @@
 			</param>
 		</rcconf>
 		<sysctl>
+			<!--
 			<param>
 				<enable/>
 				<uuid>dc8e537a-34f2-4aa7-afe8-cd631a52005a</uuid>
@@ -143,6 +144,7 @@
 				<value>15</value>
 				<comment>ATA disk timeout vis-a-vis power-saving</comment>
 			</param>
+			-->
 			<param>
 				<enable/>
 				<uuid>2f71d182-095e-11de-8303-0011951cd231</uuid>
@@ -349,14 +351,14 @@
 			</param>
 			-->
 		</sysctl>
+		<!--
 		<hosts>
-			<!--
 			<uuid>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</uuid>
 			<name>xxx</name>
 			<address>xxx.xxx.xxx.xxx</address>
 			<descr>xxx</descr>
-			-->
 		</hosts>
+		-->
 		<hostsacl>
 			<rule>#ftpd  : xxx.xxx.xxx.xxx : deny</rule>
 			<rule>#sshd : .example.com : deny</rule>
@@ -672,6 +674,12 @@
 		<maxoutstandingr2t>16</maxoutstandingr2t>
 		<defaulttime2wait>2</defaulttime2wait>
 		<defaulttime2retain>60</defaulttime2retain>
+		<uctladdress>127.0.0.1</uctladdress>
+		<uctlport>3261</uctlport>
+		<uctlnetmask>127.0.0.1/8</uctlnetmask>
+		<uctlauthmethod>CHAP</uctlauthmethod>
+		<uctlauthgroup>0</uctlauthgroup>
+		<mediadirectory>/mnt</mediadirectory>
 		<!--
 		<portalgroup>
 			<uuid>xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx</uuid>
@@ -832,8 +840,8 @@
 		<largereadwrite/>
 		<!-- <usesendfile/> -->
 		<!-- <aio/> -->
-		<aiorsize>1</aiorsize>
-		<aiowsize>1</aiowsize>
+		<aiorsize>4096</aiorsize>
+		<aiowsize>4096</aiowsize>
 		<aiowbehind/>
 		<!--
 		// createmask and directorymask can be used to overwrite default values when security=share
